--- a/style.css
+++ b/style.css
@@ -24,13 +24,13 @@ body{
 }
 
 .map{
-    margin-left: 7px;
+    margin:15px;
     width: 99%;
     height: 60vh;
 }
 
 #search{
-    width: 80%;
+    width: 90%;
     height: 50px;
     border-radius: 5px;
 }
